--- a/public_html/css/layout.css
+++ b/public_html/css/layout.css
@@ -57,9 +57,8 @@ body{
     background-color: #fff;
     padding: 20px;
     margin-top: 20px;
-    
-}
 
+}
 
 .rightCol{
     float:left;
@@ -69,3 +68,34 @@ body{
     border: 1px solid #000;
 }
 
+.footer{
+    padding: 20px;
+    text-align: center;
+    background-color: #ddd;
+    margin-top: 20px
+}
+
+.row:after{
+    
+    content: "";
+    display:table;
+    clear: both;
+    
+}
+
+@media screen and (max-width: 800px){
+    .leftCol, .rightCol{
+        width: 100%;
+        padding:0;
+    }
+}
+
+@media screen and (max-width:400px){
+    .nav a{
+        float:none;
+        width: 100%;
+        
+    }
+    
+    
+}
